# fexo-open-router

./: .env  .env.development  .env.production  .env.staging  .gitignore  Makefile  app.py  envtemp  initial_process.py  main.py  pyproject.toml  requirements.txt  test.ipynb  trans.py
app/: logging_setup.py
app/config/: logging_config.py  mp_config.py
app/database/mongodb/: __init__.py
app/database/postgres/: db.py
app/database/solr/: db.py
app/helpers/Enums/: Item_currency_enum.py  Item_status_enum.py  __init__.py  collection_types_enum.py  item_veg_or_non_veg_enum.py  mongo_status_enum.py  search_filters_provider_item_status_enum.py  (+2 more)
app/routers/: discovery.py  initial_index_from_db.py  solr_helpers.py  solr_index.py
config/: models_catalog.yaml  routing_policies.yaml  tenants.yaml
database/mongodb/: __init__.py
database/solrdb/: __init__.py
design/: architecture.drawio  specification.docx
functions/: documents_operations.py  pydantic_models.py  search_with_filters.py
helpers/: env_constants.py  get_free_cpus.py  mp.py
helpers/constants/: sorting_types.py
models/: text_embeddings.py
solr_core_config/ret_electronics/: core.properties
solr_core_config/ret_fnb/: core.properties
solr_core_config/ret_grocery/: core.properties
solr_core_config/test_v2/: core.properties
solr_core_config/test_v3/: core.properties
solr_core_config/test_v4/: core.properties
src/: logging_setup.py
src/config/: event_loop.py  logging.py  multiprocessing.py
src/middleware/: http_logging.py
src/routers/: chat.py
src/services/: auth.py  route.py
(+48 files in other folders)
