[project]
requires-python = ">=3.12"
name = "open-router"
description = "Open Router"
authors = [
    {name="S MUNI HARISH", email="samamuniharish@gmail.com"}
]
readme = "README.md"

[tool.poetry]
version = "0.1.0"
packages=[
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
fastapi = {extras = ["standard"], version = "^0.116.1"}
orjson = "^3.11.1"
starlette = "^0.47.2"
numpy = "^2.3.2"
pandas = "^2.3.1"
psutil = "^7.0.0"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
ruff = "^0.12.7"
pre-commit = "^4.2.0"
mypy = "^1.17.1"
isodate = "^0.7.2"
sqlalchemy = "^2.0.42"
alembic = "^1.16.4"
aiobreaker = "^1.2.0"
schedule = "^1.2.2"
uvloop = "^0.21.0"


[tool.poetry.group.dev.dependencies]
dotenv-cli = "^3.4.1"

[tool.ruff]
line-length = 1000
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
